// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> should change style if disabled 1`] = `
.c0 {
  display: block;
  position: relative;
}

.c1 {
  -webkit-appearance: none;
  -webkit-box-align: center;
  -webkit-writing-mode: horizontal-tb;
  position: relative;
  height: 40px;
  padding-left: 12px;
  padding-right: 20px;
  border-width: 1px;
  border-color: #d3d3d3;
  font-size: 16px;
  border-radius: 6px;
  -webkit-transition: all 250ms ease 0s;
  transition: all 250ms ease 0s;
  background-color: #fff;
  outline: none;
  width: 100%;
}

.c1:focus {
  box-shadow: #3FA2F7 0px 0px 0px 1px;
}

.c1:disabled {
  background-color: #EAEAEA;
  color: #8F8F8F;
  cursor: not-allowed;
}

.c3 {
  height: 1.25rem;
  width: 1.25rem;
}

.c2 {
  position: absolute;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 1.5rem;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  right: 15px;
  top: 50%;
  pointer-events: none;
  z-index: 2;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div>
  <label
    for="select-input"
  >
    Name
  </label>
  <div
    class="c0"
  >
    <select
      class="c1"
      disabled=""
      id="select-input"
    >
      <option
        value=""
      >
        Default
      </option>
      <option
        value="second"
      >
        Second
      </option>
    </select>
    <div
      class="c2"
    >
      <svg
        class="c3"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`<Select /> should render 1`] = `
.c0 {
  display: block;
  position: relative;
}

.c1 {
  -webkit-appearance: none;
  -webkit-box-align: center;
  -webkit-writing-mode: horizontal-tb;
  position: relative;
  height: 40px;
  padding-left: 12px;
  padding-right: 20px;
  border-width: 1px;
  border-color: #d3d3d3;
  font-size: 16px;
  border-radius: 6px;
  -webkit-transition: all 250ms ease 0s;
  transition: all 250ms ease 0s;
  background-color: #fff;
  outline: none;
  width: 100%;
}

.c1:focus {
  box-shadow: #3FA2F7 0px 0px 0px 1px;
}

.c1:disabled {
  background-color: #EAEAEA;
  color: #8F8F8F;
  cursor: not-allowed;
}

.c3 {
  height: 1.25rem;
  width: 1.25rem;
}

.c2 {
  position: absolute;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 1.5rem;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  right: 15px;
  top: 50%;
  pointer-events: none;
  z-index: 2;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div>
  <label
    for="select-input"
  >
    Name
  </label>
  <div
    class="c0"
  >
    <select
      class="c1"
      id="select-input"
    >
      <option
        value=""
      >
        Default
      </option>
      <option
        value="second"
      >
        Second
      </option>
    </select>
    <div
      class="c2"
    >
      <svg
        class="c3"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;
